src/c/x509/XVersion.h

/*
 * Generated by asn1c-0.9.23 (http://lionet.info/asn1c)
 * From ASN.1 module "PKIX1Explicit88"
 * 	found in "../../../asn.1/rfc3280-PKIX1Explicit88.asn"
 */

#ifndef	_XVersion_H_
#define	_XVersion_H_


#include <asn_application.h>

/* Including external dependencies */
#include <INTEGER.h>

#ifdef __cplusplus
extern "C" {
#endif

/* Dependencies */
typedef enum XVersion {
	XVersion_v1	= 0,
	XVersion_v2	= 1,
	XVersion_v3	= 2
} e_XVersion;

/* XVersion */
typedef INTEGER_t	 XVersion_t;

/* Implementation */
extern asn_TYPE_descriptor_t asn_DEF_XVersion;
asn_struct_free_f XVersion_free;
asn_struct_print_f XVersion_print;
asn_constr_check_f XVersion_constraint;
ber_type_decoder_f XVersion_decode_ber;
der_type_encoder_f XVersion_encode_der;
xer_type_decoder_f XVersion_decode_xer;
xer_type_encoder_f XVersion_encode_xer;

#ifdef __cplusplus
}
#endif

#endif	/* _XVersion_H_ */
#include <asn_internal.h>